# gtfs-static-types.nix.rs

./: flake.nix  scope.nix
gtfs-realtime-types/: Cargo.toml  build.rs
gtfs-realtime-types/examples/: parse-vehicles.rs
gtfs-realtime-types/src/: gtfs-realtime.proto  lib.rs
gtfs-schedule-types/: Cargo.toml
gtfs-schedule-types/.cargo/: config.toml
gtfs-schedule-xslt/: gtfs-schedule-html.nix
gtfs-schedule-xslt/src/xsl/: gtfs-schedule.rs.xsl
